[gd_scene load_steps=5 format=2]

[ext_resource path="res://unit_icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/units/enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 350.0

[sub_resource type="CircleShape2D" id=2]
radius = 1000.0

[node name="Enemy" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="GuardArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GuardArea"]
shape = SubResource( 1 )

[node name="VisibilityArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisibilityArea"]
shape = SubResource( 2 )
[connection signal="body_shape_entered" from="GuardArea" to="." method="_on_GuardArea_body_shape_entered"]
[connection signal="body_shape_exited" from="GuardArea" to="." method="_on_GuardArea_body_shape_exited"]
[connection signal="body_entered" from="VisibilityArea" to="." method="_on_VisibilityArea_body_entered"]
[connection signal="body_exited" from="VisibilityArea" to="." method="_on_VisibilityArea_body_exited"]
